[metadata]
name = bam_to_mate_hist
summary = Quality control for Hi-C libraries
license = GNU Affero General Public License v3.0
description-file =
    Readme.md
home-page = http://github.com/phasegenomics/bam_to_mate_hist
requires-python = >=2.7
classifier =
    Programming Language :: Python'
    Programming Language :: Python :: 2.7'
    Programming Language :: Python :: 3.5'
    Programming Language :: Python :: 3.6'

[files]
packages =
    bam_to_mate_hist
