[metadata]
name = bam_to_mate_hist
summary = Quality control for Hi-C libraries
license = GNU Affero General Public License v3.0
description-file =
    Readme.md
home-page = http://github.com/phasegenomics/hic_qc
requires-python = >=2.7
classifier =
    Programming Language :: Python'
    Programming Language :: Python :: 2.7'
    Programming Language :: Python :: 3.5'
    Programming Language :: Python :: 3.6'
[files]
packages =
    hic_qc
[versioneer]
VCS = git
style = pep440
versionfile_source = _version.py
versionfile_build = _version.py
tag_prefix = hic_qc
parentdir_prefix = hic_qc-
